--- a/rollup/core/classes/RollupCurrencyInfo.cls
+++ b/rollup/core/classes/RollupCurrencyInfo.cls
@@ -1,8 +1,8 @@
-public without sharing class RollupCurrencyInfo {
+public without sharing virtual class RollupCurrencyInfo {
   public static final String CURRENCY_ISO_CODE_FIELD_NAME = 'CurrencyIsoCode';
 
   @TestVisible
-  private static Map<String, RollupCurrencyInfo> mockCurrencyData;
+  private static List<RollupCurrencyInfo> mockCurrencyData;
   private static final Map<Id, SObject> TRANSFORMED_MULTICURRENCY_CALC_ITEMS = new Map<Id, SObject>();
   private static final Set<String> HASHED_ITEM_VALUES = new Set<String>();
 
@@ -13,6 +13,17 @@ public without sharing class RollupCurrencyInfo {
         IS_MULTICURRENCY = UserInfo.isMultiCurrencyOrganization();
       }
       return IS_MULTICURRENCY;
+    }
+    set;
+  }
+
+  @TestVisible
+  private static Boolean IS_DATED_MULTICURRENCY {
+    get {
+      if (IS_DATED_MULTICURRENCY == null) {
+        IS_DATED_MULTICURRENCY = Type.forName('DatedConversionRate') != null;
+      }
+      return IS_DATED_MULTICURRENCY;
     }
     set;
   }
@@ -39,10 +50,56 @@ public without sharing class RollupCurrencyInfo {
     set;
   }
 
+  // Can't be Schema.SObjectType => Schema.SObjectField because not all orgs have OppLineItems/Splits
+  private static final Map<String, List<String>> DATED_MULTICURRENCY_SUPPORTED_OBJECTS = new Map<String, List<String>>{
+    'Opportunity' => new List<String>{ 'CloseDate' },
+    'OpportunityLineItem' => new List<String>{ 'ServiceDate' },
+    'OpportunityLineItemSchedule' => new List<String>{ 'ScheduleDate' },
+    'OpportunitySplit' => new List<String>{ 'OpportunityId', 'CloseDate' } // yikes
+  };
+
   public String IsoCode { get; set; }
   public Decimal ConversionRate { get; set; }
   public Integer DecimalPlaces { get; set; }
-  public Boolean IsCorporate { get; set; }
+  // next two fields only available for DatedConversionRate-based RollupCurrencyInfos
+  public Date StartDate { get; set; }
+  public Date NextStartDate { get; set; }
+
+  public virtual override String toString() {
+    Map<String, Object> props = new Map<String, Object>();
+    props.put('IsoCode', this.IsoCode);
+    props.put('ConversionRate', this.ConversionRate);
+    props.put('DecimalPlaces', this.DecimalPlaces);
+    props.put('StartDate', this.StartDate);
+    props.put('NextStartDate', this.NextStartDate);
+    return JSON.serialize(props);
+  }
+
+  protected virtual RollupCurrencyInfo getInfo(SObject calcItem, String isoCode) {
+    return this;
+  }
+
+  protected virtual void addInfo(RollupCurrencyInfo info) {
+  }
+
+  public static void loadChildItemInfo(
+    List<SObject> calcItems,
+    Schema.SObjectField opFieldOnCalcItem,
+    String parentIsoCode,
+    List<RollupOrderBy__mdt> orderBys
+  ) {
+    if (IS_DATED_MULTICURRENCY) {
+      for (SObject calcItem : calcItems) {
+        if (DATED_MULTICURRENCY_SUPPORTED_OBJECTS.containsKey(calcItem.getSObjectType().getDescribe().getName())) {
+          actuallyTransformCurrency(calcItem, opFieldOnCalcItem, parentIsoCode, orderBys);
+        }
+      }
+      // TODO idea here is to call actuallyTransformCurrency for the calc items
+      // based on the ... created date? date range
+      // also this is only valid in certain situations, all other currency fields need to use traditional currency management
+      // https://help.salesforce.com/s/articleView?id=sf.administration_about_advanced_currency_management.htm&type=5
+    }
+  }
 
   public static Boolean isMultiCurrency() {
     return IS_MULTICURRENCY;
@@ -71,6 +128,20 @@ public without sharing class RollupCurrencyInfo {
   }
 
   public static void transformForMultiCurrencyOrgs(
+    SObject calcItem,
+    Schema.SObjectField opFieldOnCalcItem,
+    String parentIsoCode,
+    List<RollupOrderBy__mdt> orderBys
+  ) {
+    if (
+      IS_DATED_MULTICURRENCY == false ||
+      IS_DATED_MULTICURRENCY && DATED_MULTICURRENCY_SUPPORTED_OBJECTS.containsKey(calcItem.getSObjectType().getDescribe().getName()) == false
+    ) {
+      actuallyTransformCurrency(calcItem, opFieldOnCalcItem, parentIsoCode, orderBys);
+    }
+  }
+
+  private static void actuallyTransformCurrency(
     SObject calcItem,
     Schema.SObjectField opFieldOnCalcItem,
     String parentIsoCode,
@@ -121,8 +192,10 @@ public without sharing class RollupCurrencyInfo {
 
     Decimal calcItemDenominator = (Decimal) calcItem.get(fieldOnCalcItem);
     if (calcItemDenominator != null) {
-      Decimal calcItemAmountInOrgCurrency = CURRENCY_ISO_CODE_TO_CURRENCY.get(calcItemIsoCode).ConversionRate / calcItemDenominator;
-      Decimal calcItemAmountInParentCurrency = CURRENCY_ISO_CODE_TO_CURRENCY.get(parentIsoCode).ConversionRate / calcItemAmountInOrgCurrency;
+      Decimal calcItemAmountInOrgCurrency =
+        CURRENCY_ISO_CODE_TO_CURRENCY.get(calcItemIsoCode).getInfo(calcItem, calcItemIsoCode).ConversionRate / calcItemDenominator;
+      Decimal calcItemAmountInParentCurrency =
+        CURRENCY_ISO_CODE_TO_CURRENCY.get(parentIsoCode).getInfo(calcItem, parentIsoCode).ConversionRate / calcItemAmountInOrgCurrency;
       clonedCalcItem.put(CURRENCY_ISO_CODE_FIELD_NAME, parentIsoCode);
       if (fieldOnCalcItem.getDescribe().isCalculated() == false) {
         clonedCalcItem.put(fieldOnCalcItem, calcItemAmountInParentCurrency);
@@ -139,20 +212,75 @@ public without sharing class RollupCurrencyInfo {
   }
 
   private static Map<String, RollupCurrencyInfo> getCurrencyMap() {
-    if (mockCurrencyData != null) {
-      return mockCurrencyData;
-    }
-
+    List<RollupCurrencyInfo> currencyInfos = new List<RollupCurrencyInfo>();
     Map<String, RollupCurrencyInfo> currencyInfoMap = new Map<String, RollupCurrencyInfo>();
-    if (IS_MULTICURRENCY == false) {
-      return currencyInfoMap;
+    if (mockCurrencyData != null) {
+      currencyInfos.addAll(mockCurrencyData);
+    } else {
+      if (IS_DATED_MULTICURRENCY) {
+        // TODO no DecimalPlaces on DatedConversionRate. Also need to handle date range filter based on MIN & MAX of passed in calc item dates
+        // as well, may need to ALSO query CurrencyType to cover objects where dated conversion rates aren't supported
+        String query = 'SELECT IsoCode, ConversionRate, StartDate, NextStartDate from DatedConversionRate';
+        currencyInfos.addAll((List<RollupCurrencyInfo>) JSON.deserialize(JSON.serialize(Database.query(query)), List<RollupCurrencyInfo>.class));
+      }
+      if (IS_MULTICURRENCY) {
+        String query = 'SELECT IsoCode, ConversionRate, DecimalPlaces FROM CurrencyType WHERE IsActive = TRUE';
+        currencyInfos.addAll((List<RollupCurrencyInfo>) JSON.deserialize(JSON.serialize(Database.query(query)), List<RollupCurrencyInfo>.class));
+      }
     }
 
-    String query = 'SELECT IsoCode, ConversionRate, DecimalPlaces, IsCorporate FROM CurrencyType WHERE IsActive = TRUE';
-    List<RollupCurrencyInfo> currencyTypes = (List<RollupCurrencyInfo>) JSON.deserialize(JSON.serialize(Database.query(query)), List<RollupCurrencyInfo>.class);
-    for (RollupCurrencyInfo currencyType : currencyTypes) {
-      currencyInfoMap.put(currencyType.IsoCode, currencyType);
+    for (RollupCurrencyInfo currencyInfo : currencyInfos) {
+      if (currencyInfoMap.containsKey(currencyInfo.IsoCode)) {
+        currencyInfoMap.get(currencyInfo.IsoCode).addInfo(currencyInfo);
+      } else {
+        RollupCurrencyInfo mappedInfo = IS_DATED_MULTICURRENCY ? new DatedCurrencyFinder(currencyInfo) : currencyInfo;
+        currencyInfoMap.put(currencyInfo.IsoCode, mappedInfo);
+      }
     }
     return currencyInfoMap;
+  }
+
+  private class DatedCurrencyFinder extends RollupCurrencyInfo {
+    private final List<RollupCurrencyInfo> currencyInfos = new List<RollupCurrencyInfo>();
+    private final Map<String, RollupCurrencyInfo> isoCodeToBaseInfo = new Map<String, RollupCurrencyInfo>();
+    private final Map<Id, RollupCurrencyInfo> cachedItemToInfo = new Map<Id, RollupCurrencyInfo>();
+
+    public DatedCurrencyFinder(RollupCurrencyInfo info) {
+      this.addInfo(info);
+    }
+
+    public override String toString() {
+      return JSON.serialize(this.currencyInfos);
+    }
+
+    protected override void addInfo(RollupCurrencyInfo info) {
+      if (info.StartDate != null) {
+        this.currencyInfos.add(info);
+      } else {
+        this.isoCodeToBaseInfo.put(info.IsoCode, info);
+      }
+    }
+
+    protected override RollupCurrencyInfo getInfo(SObject calcItem, String isoCode) {
+      if (cachedItemToInfo.containsKey(calcItem.Id)) {
+        return cachedItemToInfo.get(calcItem.Id);
+      }
+      List<String> itemToDateFieldMapping = DATED_MULTICURRENCY_SUPPORTED_OBJECTS.get(calcItem.getSObjectType().getDescribe().getName());
+      if (itemToDateFieldMapping == null) {
+        return this.isoCodeToBaseInfo.get(isoCode);
+      }
+
+      Date currencyDate = itemToDateFieldMapping.size() == 1
+        ? (Date) calcItem.get(itemToDateFieldMapping[0])
+        : (Date) calcItem.getSObject(itemToDateFieldMapping[0]).get(itemToDateFieldMapping[1]);
+
+      for (RollupCurrencyInfo info : this.currencyInfos) {
+        if (info.IsoCode == isoCode && info.NextStartDate > currencyDate && currencyDate >= info.StartDate) {
+          cachedItemToInfo.put(calcItem.Id, info);
+          return info;
+        }
+      }
+      return this;
+    }
   }
 }
